# graphcast

./: .gitignore  README.md  graphcast_demo.ipynb  pyproject.toml  setup.py
graphcast/: autoregressive.py  data_utils.py  grid_mesh_connectivity.py  icosahedral_mesh.py  legacy_utils.py  losses.py  model.py  xarray_jax.py
graphcastmodel/: autoregressive.py  casting.py  checkpoint_test.py  data_utils.py  data_utils_test.py  deep_typed_graph_net.py  download_utils.py  graphcast.py  grid_mesh_connectivity.py  grid_mesh_connectivity_test.py  icosahedral_mesh_test.py  losses.py  model_utils.py  normalization.py  predictor_base.py  rollout.py  solar_radiation_test.py  typed_graph_net.py  xarray_jax_test.py  xarray_tree_test.py
leonardo/: .env  setup.sh
leonardo/configs/: full.toml  operational.toml  small.toml
leonardo/scripts/: demo_experiment.py  demo_experiment.slurm  download_demo.py  download_demo.slurm  download_era5.py  download_era5.slurm  jupyterlab.sh  profile_graphcast_demo.sh  regrid_era5.slurm
notebooks/: notes.ipynb
